[2단계 - 사다리 게임] 레디(최동근) 미션 제출합니다. (#357)
* fix: 마지막 이름앞에 공백 문자 추가

* refactor: 이름 포맷 메서드 리턴 타입 및 시그니쳐 변경

* refactor: 플레이어의 이름이 5초과인 테스트 케이스 수정

* docs: 구현 기능 목록 추가

* feat: 최대 12명 이하 입력 받는다.

* docs: 2단계 구현 기능 목록 추가

* feat: 실행 결과를 담을 객체 생성

* feat: 상품 객체 생성

* feat: 실행 결과 입력 요청 메시지를 출력한다.

* feat: 실행 결과 입력하는 기능 구현

* feat: 실행 결과의 갯수는 참여 인원수와 같아야 한다.

* feat: 사다리 경로를 탐색한다.

* test: 사다리 경로 탐색 후 결과 확인 테스트 추가

* refactor: 실행결과 출력문을 사다리 결과로 수정

* feat: 입력 받은 실행 결과를 사다리 밑에 출력한다.

* feat: 결과를 보고 싶은 사람 입력 요청 메시지를 출력하고 입력받는다.

* feat: 개인별 이름을 입력하면 개인별 결과를 출력한다.

* refactor: 사다리 탐색 결과를 Map으로 저장하는 객체 생성 (LadderResult)

* feat: all 을 입력하면 전체 참여자의 실행 결과를 출력한다.

* refactor: 사다리를 타고 결과 찾는 메서드 코드 리팩터링

* feat: 참여자 중 없는 이름인 경우 예외 처리한다.

* refactor: Height와 Prize class 에서 recode로 변환

* refactor: Step을 class 에서 enum 으로 변경

* refactor: LineElement 제거 후 LadderStatus 활용

* refactor: 사다리 결과를 찾는 메서드의 파라미터 객체 단계 통일

* refactor: 사다리 상품 결과 객체 class 에서 dto로 변경

* refactor: 결과를 보고 싶은 사람 입력 메서드명 수정 및 상수 제거

* refactor: 테스트 코드 메서드 명 수정

* refactor: application 클래스 application 패키지로 이동

* feat: 참여 인원 수와 실행 결과 수가 다르게 사용될 때 예외 발생

* refactor: message 필드명 수정

* refactor: OutputView 메서드 코드 리팩터링

* feat: 참여자의 이름이 영문자가 아닐 시 예외가 발생한다.

* feat: 참여자 이름의 양끝 공백은 제거하여 저장

* refactor: 연속한 두개의 Step이 포함되는지 확인하는 테스트 코드의 break 추가

* refactor: LadderResult를 recode에서 class로 다시 변경

* feat: 모든 참여자의 결과를 출력하고 난 후 프로그램이 종료

* refactor: 사용하지 않는 메서드 제거

* docs: 종료 조건 자세하게 작성

* refactor: view 레이어에 model 의존성 제거

* refactor: 메서드 명 수정

* refactor: 메서드 분리하여 인덴트 줄이기

* style: TODO 주석 제거

* refactor: players 필드명을 클래스명과 다르게 수정

* fix: 테스트 코드 변수를 한글에서 영문으로 수정

* style: 테스트코드의 DisplayName을 명확하게 수정

* refactor: 파라미터에 final 추가

* feat: 메서드 내의 공백 제거

* refactor: 사다리 출력을 위한 요소 수정

* refactor: 메서드 분리 및 추출하여 의미 전달

* refactor: "all" 상수로 변경

* refactor: 컨벤션에 맞춰 final과 static 순서 변경

* refactor: 문자열 공백 제거를 isBlank 메서드 활용

* refactor: %n